<?xml version="1.0" encoding="utf-8"?>

<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:columnCount="3"
    android:rowCount="13">


    <include
        layout="@layout/toolbar"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_row="0"
        android:layout_column="0" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="20dp"
        android:layout_row="1"
        android:layout_column="0">
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:weightSum="1"
        android:layout_row="2"
        android:layout_column="0">

        <TextView
            android:layout_width="120dp"
            android:layout_height="40dp"
            android:text="@string/nombre"
            android:id="@+id/lblNombre"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_marginLeft="30dp"
            android:gravity="center_vertical" />

        <EditText
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:id="@+id/txtNombre"
            android:layout_weight="1"
            android:layout_marginRight="50dp"
            android:inputType="text" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_centerVertical="true"
        android:layout_column="0"
        android:layout_row="5"
        android:paddingBottom="0dp"
        android:paddingTop="0dp">

        <TextView
            android:id="@+id/lblDescripcion"
            android:layout_width="120dp"
            android:layout_height="40dp"
            android:layout_marginLeft="30dp"
            android:gravity="center_vertical"
            android:text="@string/descripcion"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/txtDescripcion"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_marginRight="50dp"
            android:layout_weight="1"
            android:inputType="text" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:paddingBottom="0dp"
        android:paddingTop="0dp"
        android:layout_centerVertical="true"
        android:layout_row="4"
        android:layout_column="0" >

        <TextView
            android:id="@+id/lblEditorial"
            android:layout_width="120dp"
            android:layout_height="40dp"
            android:layout_marginLeft="30dp"
            android:gravity="center_vertical"
            android:text="@string/editorial"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <Spinner
            android:id="@+id/spEditorial"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_marginRight="50dp"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:paddingBottom="0dp"
        android:paddingTop="0dp"
        android:layout_centerVertical="true"
        android:layout_row="6"
        android:layout_column="0" >

        <TextView
            android:id="@+id/lblEstado"
            android:layout_width="120dp"
            android:layout_height="40dp"
            android:layout_marginLeft="30dp"
            android:gravity="center_vertical"
            android:text="@string/estado"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <Spinner
            android:id="@+id/spEstado"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_marginRight="50dp"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:paddingBottom="0dp"
        android:paddingTop="0dp"
        android:layout_centerVertical="true"
        android:layout_row="7"
        android:layout_column="0" >

        <RatingBar
            android:id="@+id/txtValoracion"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginLeft="60dp"
            android:layout_marginRight="60dp"
            android:layout_weight="1"
            android:numStars="5"
            android:stepSize="1.0" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:paddingBottom="0dp"
        android:paddingTop="0dp"
        android:layout_centerVertical="true"
        android:layout_row="3"
        android:layout_column="0" >

        <TextView
            android:id="@+id/lblAutor"
            android:layout_width="120dp"
            android:layout_height="40dp"
            android:layout_marginLeft="30dp"
            android:gravity="center_vertical"
            android:text="@string/autor"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:id="@+id/txtAutor"
            android:layout_weight="1"
            android:layout_marginRight="50dp"
            android:inputType="text" />
    </LinearLayout>

    <Button
        android:id="@+id/btnAceptar"
        android:layout_width="250dp"
        android:layout_height="45dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_column="0"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:layout_row="8"
        android:background="@color/ColorPrimaryDark"
        android:text="@string/guardar"
        android:textColor="@color/cardview_light_background" />

</GridLayout>