<?xml version="1.0" encoding="utf-8"?>

<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:columnCount="3"
    android:rowCount="13">


    <include
        layout="@layout/toolbar"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_row="0"
        android:layout_column="0" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="53dp"
        android:layout_row="1"
        android:layout_column="0"></LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:weightSum="1"
        android:layout_row="2"
        android:layout_column="0"
        >

        <TextView
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/nombre"
            android:id="@+id/lblNombre"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_marginLeft="30dp" />

        <TextView
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:id="@+id/txtNombre"
            android:layout_weight="1"
            android:layout_marginRight="50dp"
            android:layout_marginLeft="20dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:paddingBottom="0dp"
        android:paddingTop="0dp"
        android:layout_centerVertical="true"
        android:layout_row="5"
        android:layout_column="0" >

        <TextView
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/descripcion"
            android:id="@+id/lblDescripcion"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_marginLeft="30dp" />

        <TextView
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:id="@+id/txtDescripcion"
            android:layout_weight="1"
            android:layout_marginRight="50dp"
            android:layout_marginLeft="20dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:paddingBottom="0dp"
        android:paddingTop="0dp"
        android:layout_centerVertical="true"
        android:layout_row="3"
        android:layout_column="0" >

        <TextView
            android:id="@+id/lblAutor"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:text="@string/autor"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/txtAutor"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="50dp"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:paddingBottom="0dp"
        android:paddingTop="0dp"
        android:layout_centerVertical="true"
        android:layout_row="6"
        android:layout_column="0" >

        <TextView
            android:id="@+id/lblEstado"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:text="@string/estado"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/txtEstado"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="50dp"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:paddingBottom="0dp"
        android:paddingTop="0dp"
        android:layout_centerVertical="true"
        android:layout_row="4"
        android:layout_column="0" >

        <TextView
            android:id="@+id/lblEditorial"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:text="@string/editorial"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/txtEditorial"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="50dp"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_centerVertical="true"
        android:layout_column="0"
        android:layout_row="7"
        android:paddingBottom="0dp"
        android:paddingTop="0dp">

        <RatingBar
            android:id="@+id/txtValoracion"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginLeft="60dp"
            android:layout_marginRight="60dp"
            android:layout_weight="1"
            android:isIndicator="true"
            android:numStars="5"
            android:stepSize="1.0" />

    </LinearLayout>

</GridLayout>